[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mumu-agent"
version = "1.0.0"
description = "MuMu Agent - AI Assistant with Computer Control and WebUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Wang MuMu", email = "wangmumu@example.com"}
]
keywords = ["ai", "agent", "assistant", "computer-control", "webui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "duckduckgo-search>=4.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "pywin32>=306; platform_system=='Windows'",
    "psutil>=5.9.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sse-starlette>=2.0.0",
    "chromadb>=0.4.22",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = [
    "chromadb>=0.4.22",
    "duckduckgo-search>=4.0",
    "pyautogui>=0.9.54",
    "pywin32>=306; platform_system=='Windows'",
]

[project.scripts]
mumu = "mumu_agent.cli:main"
mumu-webui = "mumu_agent.webui:main"
mumu-gateway = "mumu_agent.gateway:main"
mumu-chat = "mumu_agent.cli:chat"
mumu-skills = "mumu_agent.cli:skills"

[project.urls]
Homepage = "https://github.com/zhuoqiong959/mumu-agent"
Repository = "https://github.com/zhuoqiong959/mumu-agent"
Issues = "https://github.com/zhuoqiong959/mumu-agent/issues"

[tool.setuptools]
packages = ["mumu_agent"]
